fix spacing in main header container and css styles for slogan

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,8 +21,14 @@
  h1 {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    color: #fff !important;
-   font-family: 'Playfair Display', serif; 
+   font-family: 'Playfair Display', serif;
  }
+
+ #slogan h5 {
+   font-size: 200%;
+   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+ }
+
  
  #quote-block {
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -99,6 +105,11 @@
    max-height: 800px;
  }
  
+.parallax {
+  width: 100%;
+  height: auto;
+}
+
  .material-icons {
    color: #31A354;
  }
